--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -118,16 +118,16 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Main Language </li>
+                <li><strong>Client</strong>: XXX </li>
+                <li><strong>Project date</strong>: XXX </li>
+                <li><strong>Project URL</strong>: <a href="#"> XXX </a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>example of portfolio details</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                포트폴리오 내의 디테일한 세부 사항을 알 수 있게 해줍니다.
               </p>
             </div>
           </div>
