--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Facts Section ======= -->
-    <section id="facts" class="facts">
+    <!--<section id="facts" class="facts">
       <div class="container">
 
         <div class="section-title">
@@ -171,7 +171,7 @@
         </div>
 
       </div>
-    </section><!-- End Facts Section -->
+    </section>--><!-- End Facts Section -->
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
@@ -423,7 +423,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <!--<section id="services" class="services">
       <div class="container">
 
         <div class="section-title">
@@ -465,7 +465,7 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section>--><!-- End Services Section -->
 
     <!-- ======= testimonials Section ======= -->
     <section id="testimonials" class="testimonials section-bg">
@@ -609,7 +609,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        
+
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
