--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Hajin Seo</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <!--<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>-->
+          <!--<a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>-->
+          <a href="https://www.instagram.com/utxojnn?igsh=MXQ0d21rYmd0c2kwMg%3D%3D&utm_source=qr" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <!--<a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
+          <!--<a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>-->
         </div>
       </div>
 
