--- a/index.html
+++ b/index.html
@@ -301,7 +301,8 @@
             </div>
           </div>
         </div>
-
+        <br><br>
+        <iframe width="100%" height="640" src="https://www.youtube.com/embed/29SEaPpfK3c?si=0S4rp9UiOpLC_UIv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </section><!-- End Resume Section -->
 
